# OneVsOne

./: .gitignore  INIParser.cpp  INIParser.h  Makefile  Makefile.am  OneVsOne.cpp  OneVsOne.def  OneVsOne.sln  OneVsOne.vcproj  README.md  README.txt  UrlHandler.cpp  UrlHandler.h  ovso.ini
.deps/: OneVsOne_la-OneVsOne.Plo
examples/: classic.ini  fancy.ini  fancy_bzfs.patch  hix.ini  report_matches.sh
examples/classic/: bzfs.conf
examples/fancy/: bzfs.conf
examples/hix/: bzfs.conf
misc/: fancy_bzfs-2.4.15.patch  fancy_bzfs.patch
scripts/: report_matches.sh
